<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.finalproject_dadriaunnarocio.SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:text="@string/my_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/name" />



    <EditText
        android:id="@+id/user_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/grade"
        android:inputType="number" />

    <EditText
        android:id="@+id/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/age"
        android:inputType="number" />

    <EditText
        android:id="@+id/favorite_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/fav_food" />

    <EditText
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/school_name"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/is_vegetarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetarian"
        android:layout_marginBottom="8dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reduced_lunch"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:textColor="#000000" />


    <CheckBox
        android:id="@+id/reduced_lunch_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="50%" />

    <CheckBox
        android:id="@+id/reduced_lunch_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="100%"
        android:layout_marginBottom="24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="signUp"
            android:text="@string/create_account" />

    </RelativeLayout>


</LinearLayout>
